# rojo

./: .dir-locals.el  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .luaurc  .travis.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  LICENSE.md  PLUGIN-DESIGN.md  PRISM.md  README.md  aftman.toml  build.rs  design.gv  foreman.toml  generate-docs  mkdocs.yml  perf-test.sh  plugin.project.json  rojo.json  rokit.toml  rustfmt.toml  selene.toml  spec.lua  test-scratch-project  testez.toml  testez.yml
crates/memofs/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/rojo-project/: Cargo.toml  README.md
memofs/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
memofs/src/: lib.rs  noop_backend.rs  snapshot.rs  std_backend.rs
rojo-test/: Cargo.toml  README.md
rojo-test/build-test-snapshots/: build_test__client_in_folder.snap  build_test__client_init.snap  build_test__csv_bug_145.snap  build_test__csv_bug_147.snap  build_test__csv_in_folder.snap  build_test__deep_nesting.snap  build_test__gitkeep.snap  build_test__ignore_glob.snap  build_test__ignore_glob_inner.snap  build_test__ignore_glob_nested.snap  build_test__init_meta_properties.snap  build_test__json_model_in_folder.snap  build_test__module_init.snap  build_test__plain.txt.snap  build_test__rbxm_in_folder.snap  build_test__rbxmx_in_folder.snap  build_test__rbxmx_ref.rbxmx.snap  build_test__server_in_folder.snap  build_test__server_init.snap  build_test__txt.snap  build_test__txt_in_folder.snap  end_to_end__tests__build__attributes.snap  end_to_end__tests__build__base_merge_delete.snap  end_to_end__tests__build__base_merge_model.snap  end_to_end__tests__build__base_merge_place.snap  end_to_end__tests__build__client_in_folder.snap  end_to_end__tests__build__client_init.snap  end_to_end__tests__build__csv_bug_145.snap  end_to_end__tests__build__csv_bug_147.snap  end_to_end__tests__build__csv_in_folder.snap  end_to_end__tests__build__deep_nesting.snap  end_to_end__tests__build__gitkeep.snap  end_to_end__tests__build__ieee_754_json_model.snap  end_to_end__tests__build__ieee_754_project.snap  end_to_end__tests__build__ignore_glob_inner.snap  end_to_end__tests__build__ignore_glob_nested.snap  end_to_end__tests__build__ignore_glob_spec.snap  end_to_end__tests__build__infer_service_name.snap  end_to_end__tests__build__infer_starter_player.snap  end_to_end__tests__build__init_csv_with_children.snap  (+49 more)
rojo-test/build-tests/: plain.txt
rojo-test/serve-test-snapshots/: end_to_end__tests__serve__add_folder_all-2.snap  end_to_end__tests__serve__add_folder_all.snap  end_to_end__tests__serve__add_folder_info.snap  end_to_end__tests__serve__add_folder_subscribe.snap  end_to_end__tests__serve__add_optional_folder.snap  end_to_end__tests__serve__add_optional_folder_all-2.snap  end_to_end__tests__serve__add_optional_folder_all.snap  end_to_end__tests__serve__add_optional_folder_subscribe.snap  end_to_end__tests__serve__added_instance_with_meta_present_all-2.snap  end_to_end__tests__serve__added_instance_with_meta_present_all.snap  end_to_end__tests__serve__added_instance_with_meta_present_info.snap  end_to_end__tests__serve__added_instance_with_meta_present_subscribe.snap  end_to_end__tests__serve__added_meta_with_instance_present_all-2.snap  end_to_end__tests__serve__added_meta_with_instance_present_all.snap  end_to_end__tests__serve__added_meta_with_instance_present_info.snap  end_to_end__tests__serve__added_meta_with_instance_present_subscribe.snap  end_to_end__tests__serve__edit_init_all-2.snap  end_to_end__tests__serve__edit_init_all.snap  end_to_end__tests__serve__edit_init_info.snap  end_to_end__tests__serve__edit_init_subscribe.snap  end_to_end__tests__serve__empty_all.snap  end_to_end__tests__serve__empty_info.snap  end_to_end__tests__serve__empty_json_model_all-2.snap  end_to_end__tests__serve__empty_json_model_all.snap  end_to_end__tests__serve__empty_json_model_info.snap  end_to_end__tests__serve__empty_json_model_subscribe.snap  end_to_end__tests__serve__forced_parent_all.snap  end_to_end__tests__serve__forced_parent_info.snap  end_to_end__tests__serve__forced_parent_serialize_model.snap  end_to_end__tests__serve__ieee_754.snap  end_to_end__tests__serve__meshpart_with_id_all.snap  end_to_end__tests__serve__meshpart_with_id_info.snap  end_to_end__tests__serve__meshpart_with_id_serialize_model.snap  end_to_end__tests__serve__model_pivot_migration_all-2.snap  end_to_end__tests__serve__model_pivot_migration_all.snap  end_to_end__tests__serve__move_folder_of_stuff_all-2.snap  end_to_end__tests__serve__move_folder_of_stuff_all.snap  end_to_end__tests__serve__move_folder_of_stuff_info.snap  end_to_end__tests__serve__move_folder_of_stuff_subscribe.snap  end_to_end__tests__serve__multiple_paths_all.snap  (+87 more)
rojo-test/src/: build_test.rs  internable.rs  lib.rs  serve_test.rs  serve_util.rs  util.rs
rojo-test/syncback-test-snapshots/: end_to_end__rojo_test__syncback_util__all_middleware.snap  end_to_end__rojo_test__syncback_util__baseplate.snap  end_to_end__rojo_test__syncback_util__child_but_not-stderr.snap  end_to_end__rojo_test__syncback_util__child_but_not-stdout.snap  end_to_end__rojo_test__syncback_util__child_but_not.snap  end_to_end__rojo_test__syncback_util__csv-stderr.snap  end_to_end__rojo_test__syncback_util__csv-stdout.snap  end_to_end__rojo_test__syncback_util__duplicate_rojo_id-stderr.snap  end_to_end__rojo_test__syncback_util__duplicate_rojo_id-stdout.snap  end_to_end__rojo_test__syncback_util__duplicate_rojo_id.snap  end_to_end__rojo_test__syncback_util__ignore_paths.snap  end_to_end__rojo_test__syncback_util__ignore_paths_adding-stderr.snap  end_to_end__rojo_test__syncback_util__ignore_paths_adding-stdout.snap  end_to_end__rojo_test__syncback_util__ignore_paths_init-stderr.snap  end_to_end__rojo_test__syncback_util__ignore_paths_init-stdout.snap  (+102 more)
server/: .editorconfig  .gitignore  Cargo.toml  README.md  single-sync-point.rbxl  test-scratch-project
vfs/: Cargo.toml  LICENSE.txt  README.md
vfs/src/: lib.rs  (+5 more)
(+1339 files in other folders)
