[package]
name = "rojo"
version = "7.2.1"
rust-version = "1.58.1"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
description = "Enables professional-grade development tools for Roblox developers"
license = "MPL-2.0"
homepage = "https://rojo.space"
documentation = "https://rojo.space/docs"
repository = "https://github.com/rojo-rbx/rojo"
readme = "README.md"
edition = "2021"
build = "build.rs"

exclude = [
    "/test-projects/**",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = []

# Enable this feature to live-reload assets from the web UI.
dev_live_assets = []

profile-with-tracy = ["profiling/profile-with-tracy", "tracy-client"]

[workspace]
members = ["crates/*"]

[lib]
name = "librojo"
path = "src/lib.rs"

[[bench]]
name = "build"
harness = false

[dependencies]
memofs = { version = "0.2.0", path = "crates/memofs" }

# These dependencies can be uncommented when working on rbx-dom simultaneously
# rbx_binary = { path = "../rbx-dom/rbx_binary" }
# rbx_dom_weak = { path = "../rbx-dom/rbx_dom_weak" }
# rbx_reflection = { path = "../rbx-dom/rbx_reflection" }
# rbx_reflection_database = { path = "../rbx-dom/rbx_reflection_database" }
# rbx_xml = { path = "../rbx-dom/rbx_xml" }

rbx_binary = "0.6.5"
rbx_dom_weak = "2.4.0"
rbx_reflection = "4.2.0"
rbx_reflection_database = "0.2.2"
rbx_xml = "0.12.3"

anyhow = "1.0.44"
backtrace = "0.3.61"
bincode = "1.3.3"
crossbeam-channel = "0.5.1"
csv = "1.1.6"
env_logger = "0.9.0"
fs-err = "2.6.0"
futures = "0.3.17"
globset = "0.4.8"
humantime = "2.1.0"
hyper = { version = "0.14.13", features = ["server", "tcp", "http1"] }
jod-thread = "0.1.2"
log = "0.4.14"
maplit = "1.0.2"
notify = "4.0.17"
opener = "0.5.0"
reqwest = { version = "0.11.10", features = ["blocking", "json", "native-tls-vendored"] }
ritz = "0.1.0"
roblox_install = "1.0.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"
termcolor = "1.1.2"
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
clap = { version = "3.1.18", features = ["derive"] }
profiling = "1.0.6"
tracy-client = { version = "0.13.2", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[build-dependencies]
memofs = { version = "0.2.0", path = "crates/memofs" }

embed-resource = "1.6.4"
anyhow = "1.0.44"
bincode = "1.3.3"
fs-err = "2.6.0"
maplit = "1.0.2"

[dev-dependencies]
rojo-insta-ext = { path = "crates/rojo-insta-ext" }

criterion = "0.3.5"
insta = { version = "1.8.0", features = ["redactions"] }
paste = "1.0.5"
pretty_assertions = "1.2.1"
serde_yaml = "0.8.21"
tempfile = "3.2.0"
walkdir = "2.3.2"
