[package]
name = "rojo"
version = "7.6.0"
rust-version = "1.83"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
description = "Enables professional-grade development tools for Roblox developers"
license = "MPL-2.0"
homepage = "https://rojo.space"
documentation = "https://rojo.space/docs"
repository = "https://github.com/rojo-rbx/rojo"
readme = "README.md"
edition = "2021"
build = "build.rs"

exclude = ["/test-projects/**"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = []

# Enable this feature to live-reload assets from the web UI.
dev_live_assets = []

# Run Rojo with this feature to open a Tracy session.
# Currently uses protocol v63, last supported in Tracy 0.9.1.
profile-with-tracy = ["profiling/profile-with-tracy"]

[workspace]
members = ["crates/*"]

[lib]
name = "librojo"
path = "src/lib.rs"

[[bench]]
name = "build"
harness = false

[dependencies]
memofs = { version = "0.3.0", path = "crates/memofs" }

# These dependencies can be uncommented when working on rbx-dom simultaneously
# rbx_binary = { path = "../rbx-dom/rbx_binary" }
# rbx_dom_weak = { path = "../rbx-dom/rbx_dom_weak" }
# rbx_reflection = { path = "../rbx-dom/rbx_reflection" }
# rbx_reflection_database = { path = "../rbx-dom/rbx_reflection_database" }
# rbx_xml = { path = "../rbx-dom/rbx_xml" }

rbx_binary = "2.0.0"
rbx_dom_weak = "4.0.0"
rbx_reflection = "6.0.0"
rbx_reflection_database = "2.0.0"
rbx_xml = "2.0.0"

anyhow = "1.0.80"
backtrace = "0.3.69"
bincode = "1.3.3"
crossbeam-channel = "0.5.12"
csv = "1.3.0"
env_logger = "0.9.3"
fs-err = "2.11.0"
futures = "0.3.30"
globset = "0.4.14"
humantime = "2.1.0"
hyper = { version = "0.14.28", features = ["server", "tcp", "http1"] }
jod-thread = "0.1.2"
log = "0.4.21"
num_cpus = "1.16.0"
opener = "0.5.2"
rayon = "1.9.0"
reqwest = { version = "0.11.24", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
ritz = "0.1.0"
roblox_install = "1.0.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
toml = "0.5.11"
termcolor = "1.4.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
clap = { version = "3.2.25", features = ["derive"] }
profiling = "1.0.15"
yaml-rust2 = "0.10.3"
data-encoding = "2.8.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[build-dependencies]
memofs = { version = "0.3.0", path = "crates/memofs" }

embed-resource = "1.8.0"
anyhow = "1.0.80"
bincode = "1.3.3"
fs-err = "2.11.0"
maplit = "1.0.2"
semver = "1.0.22"

[dev-dependencies]
rojo-insta-ext = { path = "crates/rojo-insta-ext" }

criterion = "0.3.6"
insta = { version = "1.36.1", features = ["redactions", "yaml"] }
paste = "1.0.14"
pretty_assertions = "1.4.0"
serde_yaml = "0.8.26"
tempfile = "3.10.1"
walkdir = "2.5.0"
