[package]
name = "rojo-test"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
publish = false

[dependencies]
env_logger = "0.6.2"
log = "0.4.8"
paste = "0.1.5"
rbx_dom_weak = "1.9.0"
reqwest = "0.9.20"
serde = "1.0.99"
serde_json = "1.0.40"
serde_yaml = "0.8.9"
tempfile = "3.1.0"
walkdir = "2.2.9"

rojo-insta-ext = { path = "../rojo-insta-ext" }

# We execute Rojo via std::process::Command, so depend on it so it's built!
rojo = { path = ".." }

[dependencies.insta]
git = "https://github.com/mitsuhiko/insta"
features = ["redactions"]
