[package]
name = "rojo"
version = "0.5.0-alpha.3"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
description = "A tool to create robust Roblox projects"
license = "MIT"
repository = "https://github.com/LPGhatguy/rojo"
edition = "2018"

[lib]
name = "librojo"
path = "src/lib.rs"

[[bin]]
name = "rojo"
path = "src/bin.rs"

[features]
default = []
bundle-plugin = []

[dependencies]
clap = "2.27"
csv = "1.0"
env_logger = "0.6"
failure = "0.1.3"
log = "0.4"
maplit = "1.0.1"
notify = "4.0"
rand = "0.4"
regex = "1.0"
reqwest = "0.9.5"
rouille = "2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
rbx_tree = "0.2.0"
rbx_xml = "0.2.0"
rbx_binary = "0.2.0"

[dev-dependencies]
tempfile = "3.0"
walkdir = "2.1"
lazy_static = "1.2"