[package]
name = "rojo"
version = "0.5.0-alpha.10"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
description = "A tool to create robust Roblox projects"
license = "MIT"
repository = "https://github.com/LPGhatguy/rojo"
edition = "2018"

[features]
default = []
server-plugins = []

[lib]
name = "librojo"
path = "src/lib.rs"

[[bin]]
name = "rojo"
path = "src/bin.rs"

[dependencies]
clap = "2.27"
csv = "1.0"
env_logger = "0.6"
failure = "0.1.3"
futures = "0.1"
hyper = "0.12"
log = "0.4"
maplit = "1.0.1"
notify = "4.0"
rbx_binary = "0.4.0"
rbx_dom_weak = "1.7.0"
rbx_xml = "0.9.0"
rbx_reflection = "3.0.384"
regex = "1.0"
reqwest = "0.9.5"
rlua = "0.16"
ritz = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"
walkdir = "2.1"
lazy_static = "1.2"
pretty_assertions = "0.6.1"
paste = "0.1"